@@ -23,7 +23,7 @@ ostask.unix-man.manpage=jedit.1
 # Each component must have a name, a size, and a 'fileset'. The fileset is the
 # name of a resource, relative to the root of the JAR, where the list of files
 # is stored, newline delimited
-comp.count=6
+comp.count=5
 
 comp.0.name=jEdit text editor
 comp.0.disk-size=6800
